package Model.Vader;

public interface VaderAnimStrategy {
    void animate();
}
